push mode in .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,21 +1,23 @@
 [user]
-	name = 
-	email = 
+  name = 
+  email = 
 [github]
-	user = 
+  user = 
 [diff]
-	tool = vimdiff
+  tool = vimdiff
 [difftool]
-	prompt = false
+  prompt = false
 [alias]
-	vimdiff = difftool -y -t vimdiff
+  vimdiff = difftool -y -t vimdiff
 [merge]
-	tool = vimdiff
-	conflictstyle = diff3
+  tool = vimdiff
+  conflictstyle = diff3
 [core]
-	editor = vim
-	excludesfile = ~/.cvsignore
+  editor = vim
+  excludesfile = ~/.cvsignore
 [color]
-	diff = auto
-	status = auto
-	branch = auto
+  diff = auto
+  status = auto
+  branch = auto
+[push]
+  default = simple
