.tmux.conf mouse commands updated for tmux 2.1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,26 +80,20 @@ bind r \
     source-file ~/.tmux.conf \;\
     display 'Reloaded tmux config.'
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Toggle mouse on
 bind m \
-    set -g mode-mouse on \;\
-    set -g mouse-resize-pane on \;\
-    set -g mouse-select-pane on \;\
-    set -g mouse-select-window on \;\
+    set -g mouse on \;\
     display 'Mouse: ON'
 
 # Toggle mouse off
 bind M \
-    set -g mode-mouse off \;\
-    set -g mouse-resize-pane off \;\
-    set -g mouse-select-pane off \;\
-    set -g mouse-select-window off \;\
+    set -g mouse off \;\
     display 'Mouse: OFF'
+
+unbind P
+bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -65535 ; save-buffer %1 ; delete-buffer'
 
 # pass through xterm keys
 set -g xterm-keys on
@@ -122,3 +116,5 @@ set -g window-status-current-format "#[fg=black,bg=green] ☑ #I#[bold] #W #[fg=
 set -g status-interval 1
 
 source-file ~/.tmux.airline.conf
+
+set -sg escape-time 0
