--- a/.tmux.conf
+++ b/.tmux.conf
@@ -118,3 +118,19 @@ set -g status-interval 1
 source-file ~/.tmux.airline.conf
 
 set -sg escape-time 0
+
+# Install tpm with:
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+
+# Plugins:
+set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize tpm (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
